--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "clean:deps": "del-cli node_modules"
   },
   "license": "MIT",
+  "dependencies": {
+    "@babel/runtime": "^7.9.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
