--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.10.1"
+    "@babel/runtime": "^7.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.1",
+    "@babel/core": "^7.10.2",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.1",
+    "copy-webpack-plugin": "^6.0.2",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "del-cli": "^3.0.1",
@@ -29,11 +29,12 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.2.1",
-    "terser-webpack-plugin": "^3.0.2",
+    "terser-webpack-plugin": "^3.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2",
-    "webpack-resolve-short-path-plugin": "^1.0.4"
+    "webpack-resolve-short-path-plugin": "^1.0.4",
+    "websocket-extensions": ">=0.1.4"
   }
 }
