--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.3",
     "webpack": "^4.43.0",
