--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,7 @@
     "target": "es2020",
     "baseUrl": ".",
     "paths": {
-      "~*": ["./src/*"]
+      "~*": ["./src/renderer/*"]
     }
   },
   "include": ["src/**/*"],
