--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.10.2",
+    "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -27,6 +28,9 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "del-cli": "^3.0.1",
+    "electron": "^9.0.3",
+    "electron-builder": "^22.7.0",
+    "electron-devtools-installer": "^3.0.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
