--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "📦💀 A bare-bones webpack boilerplate",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
+    "start": "concurrently -k -s first npm:start-server npm:start-wait-electron",
+    "start-server": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
+    "start-electron": "cross-env NODE_ENV=development electron ./src/main/main.js",
+    "start-wait-electron": "wait-on http://localhost:1234/ && npm run start-electron",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "clean": "del-cli dist",
-    "clean:deps": "del-cli node_modules",
-    "clean:bin": "del-cli bin",
+    "clean-deps": "del-cli node_modules",
+    "clean-bin": "del-cli bin",
     "pack": "del-cli bin && npm run build && electron-builder --dir",
     "bin": "del-cli bin && npm run build && electron-builder"
   },
@@ -43,6 +46,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^6.0.2",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
@@ -58,6 +62,7 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.3",
+    "wait-on": "^5.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
