Removed wait-on

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "📦💀 A bare-bones webpack boilerplate",
   "private": true,
   "scripts": {
-    "start": "concurrently -k -s first npm:start-server npm:start-wait-electron",
+    "start": "concurrently -k -s first npm:start-server npm:start-electron",
     "start-server": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.dev.js",
     "start-electron": "cross-env NODE_ENV=development electron ./src/main/main.js",
-    "start-wait-electron": "wait-on http://localhost:1234/ && npm run start-electron",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
     "clean": "del-cli dist",
     "clean-deps": "del-cli node_modules",
@@ -62,7 +61,6 @@
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^3.0.3",
-    "wait-on": "^5.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
