--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.10.2"
+    "@babel/runtime": "^7.10.2",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
